# autotools-test

./: configure.ac  test.txt.in
